# uv-amaranth

./: README.md  pyproject.toml  test.py
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
src/uv_amaranth/: __init__.py
src/uv_amaranth_template/: __init__.py  blinky.py
tests/: test_blinky.py
